--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo_512px"
+        android:icon="@drawable/logo2_512px"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_512px"
+        android:roundIcon="@drawable/logo2_512px"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
